service.yml
apiVersion: v1
kind: Service
metadata:
  name: express-service
  labels:
    app: express
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: express
